--- a/src/Css/Registration.css
+++ b/src/Css/Registration.css
@@ -14,3 +14,16 @@
     justify-content: center;
     margin-top: 40px;
 }
+
+.register-number {
+    /* background-color: rgb(240, 240, 121); */
+    margin: 20px;
+    margin-left: 15rem;
+    margin-right: 10rem;
+
+}
+
+.register-number p{
+    background-color: rgb(248, 248, 114);
+    
+}
